# pastel

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: add-labels-on-branch.yml  ci.yml  pull-request-issue-labels.yml  remove-labels-on-issue-closed.yml
data/: example_training_data.jsonl
scripts/: demo_beam_search.py  demo_cached_pastel.py  demo_crossval.py  demo_pastel.py
scripts/encoder_experiment/: finetune_encoder.py  flowchart.md  label_sentences.py  labelled_sentences.jsonl  questions.py
src/pastel/: models.py  optimise_weights.py  pastel.py  pastel_functions.py
src/training/: beam_search.py  cached_pastel.py  crossvalidate_pastel.py  db_manager.py
tests/pastel/: test_beam_search.py  test_cached_pastel.py  test_pastel.py
