[project]
name = "pastel"
version = "0.0.1"
description = "A library which implements the PASTEL method for determining checkworthiness."
authors = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
maintainers = [
    { name = "Full Fact", email = "afc@fullfact.org" }
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-cloud-core>=2.4.3",
    "pydantic>=2.11.7",
    "genai_utils",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "types-requests>=2.32.4.20250809",
    "tenacity>=9.1.2",
]

[tool.uv.sources]
genai_utils = { git = "https://github.com/FullFact/genai-utils.git", tag = "5.0.0"}

[build-system]
requires = ["setuptools >= 61.0",
            "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "black>=25.1.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]


[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # "ignore:Deprecated call to `pkg_resources.declare_namespace\\('.*'\\):DeprecationWarning",
    # "ignore::DeprecationWarning:google.rpc",
    # "ignore:Call to deprecated function _.*:schematics.deprecated.SchematicsDeprecationWarning", # Schematics internal warnings
    # "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
] # Ignore some noisy and unfixable warnings

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
check_untyped_defs = true
